tests/warnings/unused/let-simple.fil
comp main<'G:1>() -> () with {
  let UNUSED_PARAM = 42;
} {
}